@@ -1,3 +1,10 @@
+2005-03-16  Albert Chu  <chu11@llnl.gov>
+
+	* src/cerbrod/cerebrod_util.h, src/cerbrod/cerebrod_util.c: New files.
+
+	* src/cerebrod/cerebrod_listener.c, src/cerebrod_updown.c: Re-work
+	with new rehashing common functions.
+
 2005-03-15  Albert Chu  <chu11@llnl.gov>
 
 	Begin support of updown server.
